compile_errors.txt

> Task :eventDeploy
Not running deploy task, skipping commit

> Task :createVersionFile
createVersionFile called. Path C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\frc\robot

> Task :spotlessInternalRegisterDependencies UP-TO-DATE
> Task :spotlessGroovyGradle UP-TO-DATE
> Task :spotlessGroovyGradleApply UP-TO-DATE
> Task :spotlessJava
> Task :spotlessJavaApply
> Task :spotlessJson UP-TO-DATE
> Task :spotlessJsonApply UP-TO-DATE
> Task :spotlessMisc UP-TO-DATE
> Task :spotlessMiscApply UP-TO-DATE
> Task :spotlessApply

> Task :compileJava

> Task :processResources NO-SOURCE
Note: C:\Users\david\dev\robotics\frc\MARSLib\src\main\java\com\marslib\faults\Alert.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
> Task :classes

> Task :compileTestJava FAILED
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSAlignmentCommandTest.java:51: error: constructor MARSAlignmentCommand in class MARSAlignmentCommand cannot be applied to given types;
    MARSAlignmentCommand command = new MARSAlignmentCommand(swerveDrive, () -> targetPose);
                                   ^
  required: SwerveDrive,Supplier<Pose2d>,double,double,double,double,double,double,double,double
  found:    SwerveDrive,()->targetPose
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSAlignmentCommandTest.java:89: error: constructor MARSAlignmentCommand in class MARSAlignmentCommand cannot be applied to given types;
    MARSAlignmentCommand command = new MARSAlignmentCommand(swerveDrive, () -> targetPose);
                                   ^
  required: SwerveDrive,Supplier<Pose2d>,double,double,double,double,double,double,double,double
  found:    SwerveDrive,()->targetPose
  reason: actual and formal argument lists differ in length
Compilation Error!
GradleRIO detected this build failed due to a Compile Error (compileTestJava).
Check that all your files are saved, then scroll up in this log for more information.
[Incubating] Problems report is available at: file:///C:/Users/david/dev/robotics/frc/MARSLib/build/reports/problems/problems-report.html
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSDiagnosticCheckTest.java:136: warning: [removal] schedule() in Command has been deprecated and marked for removal
    check.schedule();
         ^
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:23: error: cannot find symbol
    assertFalse(MARSFaultManager.hasCriticalFault());
                                ^
  symbol:   method hasCriticalFault()
  location: class MARSFaultManager
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:26: error: cannot find symbol
    assertTrue(MARSFaultManager.hasCriticalFault());
                               ^
  symbol:   method hasCriticalFault()
  location: class MARSFaultManager
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:30: error: cannot find symbol
    assertFalse(MARSFaultManager.hasCriticalFault());
                                ^
  symbol:   method hasCriticalFault()
  location: class MARSFaultManager
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:35: error: cannot find symbol
    MARSFaultManager.reportWarning("Soft limits hit");
                    ^
  symbol:   method reportWarning(String)
  location: class MARSFaultManager
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:37: error: cannot find symbol
        MARSFaultManager.hasCriticalFault(), "Warnings should not escalate to critical faults");
                        ^
  symbol:   method hasCriticalFault()
  location: class MARSFaultManager
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:26: error: constructor RotaryMechanismIOSim in class RotaryMechanismIOSim cannot be applied to given types;
    RotaryMechanismIOSim sim = new RotaryMechanismIOSim(0, 100.0, 0.1);
                               ^
  required: String,double,double,double
  found:    int,double,double
  reason: actual and formal argument lists differ in length
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:29: error: cannot find symbol
    sim.setPIDConstants(50.0, 0.0, 5.0, 0.0, 0.0, 0.0, 0.0);
       ^
  symbol:   method setPIDConstants(double,double,double,double,double,double,double)
  location: variable sim of type RotaryMechanismIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:32: error: cannot find symbol
    sim.setPositionReference(1.0, 0.0);
       ^
  symbol:   method setPositionReference(double,double)
  location: variable sim of type RotaryMechanismIOSim
C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:45: error: cannot find symbol
        inputs.positionRads,
              ^
  symbol:   variable positionRads
  location: variable inputs of type RotaryMechanismIOInputsAutoLogged
11 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSDiagnosticCheckTest.java:136: warning: [removal] schedule() in Command has been deprecated and marked for removal
      check.schedule();
           ^
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:23: error: cannot find symbol
      assertFalse(MARSFaultManager.hasCriticalFault());
                                  ^
    symbol:   method hasCriticalFault()
    location: class MARSFaultManager
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:26: error: cannot find symbol
      assertTrue(MARSFaultManager.hasCriticalFault());
                                 ^
    symbol:   method hasCriticalFault()
    location: class MARSFaultManager
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:30: error: cannot find symbol
      assertFalse(MARSFaultManager.hasCriticalFault());
                                  ^
    symbol:   method hasCriticalFault()
    location: class MARSFaultManager
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:35: error: cannot find symbol
      MARSFaultManager.reportWarning("Soft limits hit");
                      ^
    symbol:   method reportWarning(String)
    location: class MARSFaultManager
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\faults\MARSFaultManagerTest.java:37: error: cannot find symbol
          MARSFaultManager.hasCriticalFault(), "Warnings should not escalate to critical faults");
                          ^
    symbol:   method hasCriticalFault()
    location: class MARSFaultManager
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:29: error: cannot find symbol
      sim.setPIDConstants(50.0, 0.0, 5.0, 0.0, 0.0, 0.0, 0.0);
         ^
    symbol:   method setPIDConstants(double,double,double,double,double,double,double)
    location: variable sim of type RotaryMechanismIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:32: error: cannot find symbol
      sim.setPositionReference(1.0, 0.0);
         ^
    symbol:   method setPositionReference(double,double)
    location: variable sim of type RotaryMechanismIOSim
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSAlignmentCommandTest.java:51: error: constructor MARSAlignmentCommand in class MARSAlignmentCommand cannot be applied to given types;
      MARSAlignmentCommand command = new MARSAlignmentCommand(swerveDrive, () -> targetPose);
                                     ^
    required: SwerveDrive,Supplier<Pose2d>,double,double,double,double,double,double,double,double
    found:    SwerveDrive,()->targetPose
    reason: actual and formal argument lists differ in length
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\auto\MARSAlignmentCommandTest.java:89: error: constructor MARSAlignmentCommand in class MARSAlignmentCommand cannot be applied to given types;
      MARSAlignmentCommand command = new MARSAlignmentCommand(swerveDrive, () -> targetPose);
                                     ^
    required: SwerveDrive,Supplier<Pose2d>,double,double,double,double,double,double,double,double
    found:    SwerveDrive,()->targetPose
    reason: actual and formal argument lists differ in length
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:26: error: constructor RotaryMechanismIOSim in class RotaryMechanismIOSim cannot be applied to given types;
      RotaryMechanismIOSim sim = new RotaryMechanismIOSim(0, 100.0, 0.1);
                                 ^
    required: String,double,double,double
    found:    int,double,double
    reason: actual and formal argument lists differ in length
  C:\Users\david\dev\robotics\frc\MARSLib\src\test\java\com\marslib\mechanisms\RotaryMechanismIOSimTest.java:45: error: cannot find symbol
          inputs.positionRads,
                ^
    symbol:   variable positionRads
    location: variable inputs of type RotaryMechanismIOInputsAutoLogged
  11 errors
  1 warning

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 5s
13 actionable tasks: 6 executed, 7 up-to-date
